@@ -1,3 +1,10 @@
+2011-03-23  Anders Carlsson  <andersca@apple.com>
+
+        Fix clang build.
+
+        * inspector/DOMNodeHighlighter.cpp:
+        Remove an unused function.
+
 2011-03-22  Brady Eidson  <beidson@apple.com>
 
         Reviewed by Sam Weinig.
